<resources>
    <string name="app_name">CST2335_FinalProject</string>
    <string name="food">Type a Food Item</string>
    <string name="search">Search</string>
    <string name="MovieButton">Movie Info</string>
    <string name="NewsButton">CBC News Reader</string>
    <string name="FoodButton">Food Nutrition Database</string>
    <string name="BusButton">OCTranspo App</string>
    <string name="SearchItem">Search</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="SaveItem">Save this Item?</string>
    <string name="Save">Save</string>
    <string name="Saved">Saved!</string>
    <string name="Author">Khalid Hafid</string>
    <string name="HowTo">Search a food item in the text field and hit the Search Button</string>
    <string name="Help">Help</string>
    <string name="Error">Enter a valid food item ie: Apple</string>
    <string name="Delete">Delete</string>
    <string name="DeleteMenu">Do you want to delete this food item</string>
    <string name="versionNum">Version: 2.0</string>
    <string name="foodSearch">Food Search</string>
    <string name="favoritesList">Favorites List</string>
    <string name="favorites">Favorites</string>
    <string name="jsonDL">Json Data is downloading</string>
    <string name="Home">Home</string>
    <string name="SearchTag">Search Tag</string>
    <string name="Settings">Settings</string>


    <!-- News Section Strings [Umber Setia] -->
    <string name="news_reader">CBC News Reader</string>

        <!-- Toolbar and items -->
    <string name="saved_articles">Saved Articles</string>
    <string name="top_articles">Top Articles</string>
    <string name="read_more_news"><u>Read More</u></string>
    <string name="news_help">Help</string>
    <string name="news_toolbar_help">Author: Umber Setia
                        \n Version: 2018-12-03
                        \n Instructions:
                        \n\t\t\t Click pages icon to view top articles.
                        \n\t\t\t Click plain yellow star to view your
                        \n\t\t\t saved articles.
                        \n\t\t\t Click on an article to see the description.
                        \n\t\t\t Click the yellow star with a + in it to save
                        \n\t\t\t the article</string>
    <string name="news_dialog_ok">OK</string>
    <string name="news_info">Info</string>

        <!-- Toast and Snackbars -->
    <string name="article_removed">Article removed</string>
    <string name="news_error">An error occurred</string>
    <string name="article_saved">Article saved</string>
    <string name="article_already_saved">Article already saved</string>

    <!-- Statistics Fragment -->
    <string name="news_stats">Statistics</string>
    <string name="news_return">Return</string>
    <string name="article_count">Number of saved articles:</string>
    <string name="average_words">Average word count:</string>
    <string name="max_words">Max word count:</string>
    <string name="min_words">Min word count:</string>


    <!-- Movie Section Strings [Dylan McCarthy] -->
    <string name="movieFavouriteText"><u>Your Favourite Movies:</u></string>
    <string name="queryMovieButton">Search Movie!</string>
    <string name="movieTextEntryHint">Enter Movie Title Here!</string>
    <string name="mainMovieFavButton">Favourites!</string>
    <string name="iconFavourites">Favourite Movies</string>
    <string name="iconHome">Home</string>
    <string name="iconHelp">Help/Info</string>
    <string name="BtnOkay">Okay</string>
    <string name="aboutDialogTitle">About the Application</string>
    <string name="aboutMessageString">"Author: Dylan McCarthy\n\nSearch for a movie by typing its title into the search bar at the top of the screen.\n\nSelecting a movie from the favourites list will give you more detail on the film.\n\nVersion 1.2"</string>
    <string name="movieDisplayTitle">Title: \n</string>
    <string name="movieDisplayRelease">\nReleased: \n</string>
    <string name="movieDisplayRating">\nRating: \n</string>
    <string name="movieDisplayRuntime">\nRuntime: \n</string>
    <string name="movieDisplayPlot">\nDescription: \n</string>
    <string name="movieDisplayStarring">\nStarring: \n</string>
    <string name="movieDoneBTN">Done</string>
    <string name="BtnView">View Film</string>
    <string name="BtnDelete">Delete FIlm</string>
    <string name="BtnCancel">Cancel</string>
    <string name="addedMovieToDB">" has been added to your Favourites!"</string>
    <string name="alreadyAddedMovieToDB">" is already in your Favourites!</string>
    <string name="movieStatsBtn">Statistics</string>
    <string name="statsDisplay1"><u>"Shortest Movie Runtime: "</u></string>
    <string name="statsDisplay2"><u>"\n\nLongest Movie Runtime: "</u></string>
    <string name="statsDisplay3"><u>"\n\nAverage Movie Runtime: "</u></string>
    <string name="movieErrorQuery">Error: No movie found with that title!</string>

</resources>
