<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Movies.MovieActivity"
    android:layout_marginBottom="10dp"
    >

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/movieToQueryEt"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@+id/queryMovieBtn"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/movieTextEntryHint"
        android:textColor="#091849"
        android:backgroundTint="#0a0017"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/queryMovieBtn"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/queryMovieButton"
        android:textColor="#919195"
        android:background="#091849"
        android:paddingRight="6dp"
        android:paddingLeft="6dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/errorInQueryTxt"
        android:text="@string/movieErrorQuery"
        android:paddingRight="6dp"
        android:paddingLeft="6dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_centerInParent="true"
        android:layout_below="@+id/movieToQueryEt"
        android:textColor="#73160c"
        android:visibility="invisible"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mainMovieFavButton"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"
        android:textColor="#919195"
        android:background="#091849"
        android:text="@string/mainMovieFavButton"
        android:paddingRight="6dp"
        android:paddingLeft="6dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        />



</RelativeLayout>