<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/news_stats_fragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/news_stats"
        android:textColor="@android:color/white"
        android:layout_gravity="center"
        android:textSize="40dp"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/min_count_ans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/min_count"
            android:layout_toEndOf="@+id/articles_count"
            android:textColor="@android:color/white"
            android:paddingTop="50dp"
            android:paddingLeft="20dp"/>

        <TextView
            android:id="@+id/min_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/max_count"
            android:layout_alignParentStart="true"
            android:text="@string/min_words"
            android:textColor="@android:color/white"
            android:paddingTop="50dp"
            android:paddingLeft="20dp"/>

        <TextView
            android:id="@+id/max_count_ans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/avg_count"
            android:layout_toEndOf="@+id/articles_count"
            android:textColor="@android:color/white"
            android:paddingTop="50dp"
            android:paddingLeft="20dp"/>

        <TextView
            android:id="@+id/max_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/avg_count"
            android:layout_alignParentStart="true"
            android:text="@string/max_words"
            android:textColor="@android:color/white"
            android:paddingTop="50dp"
            android:paddingLeft="20dp"/>

        <TextView
            android:id="@+id/avg_count_ans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/articles_count"
            android:layout_toEndOf="@+id/articles_count"
            android:textColor="@android:color/white"
            android:paddingTop="50dp"
            android:paddingLeft="20dp"/>

        <TextView
            android:id="@+id/avg_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/articles_count"
            android:layout_alignParentStart="true"
            android:text="@string/average_words"
            android:textColor="@android:color/white"
            android:paddingTop="50dp"
            android:paddingLeft="20dp"/>

        <TextView
            android:id="@+id/articles_count_ans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/articles_count"
            android:textColor="@android:color/white"
            android:paddingTop="50dp"
            android:paddingLeft="20dp"/>

        <TextView
            android:id="@+id/articles_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/article_count"
            android:textColor="@android:color/white"
            android:paddingTop="50dp"
            android:paddingLeft="20dp"/>
    </RelativeLayout>

    <Button
        android:id="@+id/close_stats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/news_return"
        android:textColor="@android:color/white"
        android:layout_gravity="center"
        android:background="@android:color/darker_gray"
        />

</LinearLayout>