<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Movies.MovieActivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/movieBar"
        app:title="OMDb API"
        android:background="#091849"
        app:titleTextColor="#e19617"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/movieToQueryEt"
        android:layout_alignParentStart="true"
        android:layout_below="@id/movieBar"
        android:layout_toStartOf="@+id/queryMovieBtn"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:hint="@string/movieTextEntryHint"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/queryMovieBtn"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/movieBar"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/queryMovieButton"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recentSearchView"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/queryMovieBtn"
        android:maxLines="1"
        android:text="@string/recentSearchHintNone"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/favouriteMovieTxt"
        android:layout_alignParentStart="true"
        android:layout_below="@id/recentSearchView"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/movieFavouriteText"
        />

    <ListView
        android:id="@+id/favouriteMovieLv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignBottom="@+id/favouriteMovieTxt"
        android:layout_below="@+id/favouriteMovieTxt"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:layout_alignParentBottom="true"
        />

</RelativeLayout>